# nested_cages

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  TOG-Sample-mouse.eps  abstract.tex  acks.tex  acmsiggraph.cls  acmtog.bst.REMOVED.git-id  acmtog.cls.REMOVED.git-id  cgal.cpp  cgal.h  conclusion.tex  fertility.off  fertility_1000.off  fertility_8000.off  fertility_8000.off.REMOVED.git-id  filter.cpp  filter.h  flow.cpp  flow.h  gargo.off  gargo_1000.off  gargo_500.off  intro.tex  io.cpp  nested.bib  nested.tex  nested.tex.REMOVED.git-id  nested_cages.cpp  reinflate.cpp  related.tex  rep_image.png.REMOVED.git-id  rep_image.xcf.REMOVED.git-id  results.tex
Code/C/: CMakeLists.txt  Makefile  README.txt  cgal.cpp  cgal.h  energy.cpp  energy.h  fertility.off.REMOVED.git-id  fertility_1000.off.REMOVED.git-id  filter.cpp  filter.h  flow.cpp  flow.h  gradient.cpp  gradient.h  io.cpp  io.h  nested_cages.cpp  reinflate.cpp  reinflate.h
Code/C/cmake/: FindELTOPO.cmake  FindMESHFIX.cmake
Code/collisiondetectionMatlab/: inflate_mex.cpp  readme.txt  self_distance_mex.cpp  testNewSequence_mex.cpp  velocity_filter_mex.cpp
Code/matlab/: CTCD_edge_edge.m  SDFGen.REMOVED.git-id  SDFGen_matlab.m  cage_2D.m  cage_3D.m  cage_generation_v1.m  cgal_simplification.m  circle_inflate.m  cmcf_and_response.m  cmcf_shrink.m  collide_eltopo_mex.cpp  collide_eltopo_mex.mexmaci64.REMOVED.git-id  collision_detection_2d.m  collision_detection_2d_opt.m  collision_detection_3D.m  combined_step_project.m  combined_step_project.m.REMOVED.git-id  dane.m  demo_signed_distance_direction.m  demo_v1.m  distance_on_conforming_tetmesh.m  distance_steepest_descent.m.REMOVED.git-id  distance_steepest_descent_tets.m  edge_collapse_enriched_polyhedron.REMOVED.git-id  edge_collapse_enriched_polyhedron.cpp  elementos_finitos_esparso.m  eltopo_expand_fine_pushing_coarse_3d.m  eltopo_step_project.m.REMOVED.git-id  eltopo_two_bins.m  eltopo_two_objs.m  expand_coarse_to_outside_fine_3D.m  expand_fine_pushing_coarse.m.REMOVED.git-id  expand_fine_pushing_coarse_3d.m.REMOVED.git-id  fan.m  fast_forward_seq.m  fertility.m  final_velocityfilter_step_project.m  flow_plot_control.m  frankenstein.m  (+67 more)
FastForward/: nested_fast_forward.mov.REMOVED.git-id  slides.pptx.REMOVED.git-id
Other/: Model1_newtest_partial.mat.REMOVED.git-id  Model1_volume_new_partial.mat.REMOVED.git-id  Model3_varap_partial.mat.REMOVED.git-id  Model4_varap_partial.mat.REMOVED.git-id  Model9_newtest_partial.mat.REMOVED.git-id  anchor_arap_partial.mat.REMOVED.git-id  arma_arap_partial.mat.REMOVED.git-id  arma_dispinitial_partial.mat.REMOVED.git-id  arma_volume_new.mat.REMOVED.git-id  couplingdown_volume_partial.mat.REMOVED.git-id  disney1_varap_partial.mat.REMOVED.git-id  dragon_arap_partial.mat.REMOVED.git-id  energy_and_quadratures.pptx.REMOVED.git-id  horse_arap25__partial.mat.REMOVED.git-id  horse_arap50_partial.mat.REMOVED.git-id  horse_arap_25_partial.mat.REMOVED.git-id  horse_varap_100_partial.mat.REMOVED.git-id  horse_varap_50_partial.mat.REMOVED.git-id  kenshi_hand_raw.mat.REMOVED.git-id  maxplank_arap50_partial.mat.REMOVED.git-id  mex_compilations.rtf  mex_compilations_linux  octopus-300k_arap_partial.mat.REMOVED.git-id  octopus-300k_disppath_partial.mat.REMOVED.git-id  some_partial.mat.REMOVED.git-id  some_partial_2.mat.REMOVED.git-id
Supplemental/: nested_cages_supplemental.zip.REMOVED.git-id
TeX/: abstract.tex  acks.tex  acmsiggraph.bst.REMOVED.git-id  acmsiggraph.cls  appendix.tex  cagesnp.pdf.REMOVED.git-id  changelog.pdf.REMOVED.git-id  changes.md  changes.txt  conclusion.tex  intro.tex  method.tex  method.tex.REMOVED.git-id  nested.tex  nested_c_opt.pdf.REMOVED.git-id  nested_old.pdf.REMOVED.git-id  nested_opt.pdf.REMOVED.git-id  old_method.tex  pre.tex  pseudocode.tex  references.bib.REMOVED.git-id  related.tex  results.tex  timings_table.tex
Videos/: rendering_slideshow.mov.REMOVED.git-id  rendering_slideshow_1920.mov.REMOVED.git-id
cgyrf/: cgyrf-nested.tex  cgyrf15.cls  outline.rtf  references.bib  support_package.rtf
cmake/: FindCOMMON.cmake  FindELTOPO.cmake  FindLIBCOLLISIONS.cmake  FindLIBIGL.cmake  FindMESHFIX.cmake  FindTALPA.cmake  FindTETGEN.cmake
mission_control/: 2014_12_19-results_script.m  2014_12_27-results_script.m  2014_12_27-results_script_2.m  results_script_2015_01_05.m  results_script_2015_01_08.m  results_script_2015_01_08.m.REMOVED.git-id  results_script_2015_01_09_1.m  results_script_2015_01_09_1.m.REMOVED.git-id  results_script_2015_01_09_2.m  results_script_2015_01_11.m  results_script_2015_01_13.m  results_script_2015_01_15.m  results_script_2015_01_16.m.REMOVED.git-id  results_script_2015_04_06.m.REMOVED.git-id  results_script_2015_05_25.m  results_script_2015_05_25.m.REMOVED.git-id  results_script_2015_05_27.m.REMOVED.git-id  results_script_2015_05_29.m  results_scrpt_2015_01_10.m  results_sctipt_2015_01_03.m
rendering/: cage-mod.hiplc.REMOVED.git-id  cage.hiplc.REMOVED.git-id  cage.hipnc.REMOVED.git-id  colors.txt  cut_0.ply.REMOVED.git-id  cut_1.ply.REMOVED.git-id  cut_2.ply.REMOVED.git-id  cut_3.ply.REMOVED.git-id  cut_4.ply.REMOVED.git-id  cut_5.ply.REMOVED.git-id  cut_6.ply.REMOVED.git-id  decimcomp.hiplc.REMOVED.git-id  energycomp.hiplc.REMOVED.git-id  homerzoom.hiplc.REMOVED.git-id  layer_0.ply.REMOVED.git-id  layer_1.ply  layer_2.ply  layer_3.ply  layer_4.ply  layer_5.ply  layer_6.ply  scene.txt  teaeser.hiplc.REMOVED.git-id  teaeser2.hiplc.REMOVED.git-id
rigidbodies/: .gitignore  .nfs00000000005802b90000146e.REMOVED.git-id  Makefile  camera.cpp  camera.h  collisiontest.REMOVED.git-id  collisiontest.pro  controller.cpp  controller.h  glpanel.cpp  glpanel.h  kdopbroadphase.cpp  kdopbroadphase.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  moc_controller.cpp  moc_glpanel.cpp  moc_mainwindow.cpp  rigidbodyctcd.cpp  rigidbodyctcd.h  rigidbodyinstance.cpp  rigidbodyinstance.h  rigidbodytemplate.cpp  rigidbodytemplate.h  rotator.cpp  rotator.h  simparameters.cpp  simparameters.h  simulation.cpp  simulation.h  ui_mainwindow.h  vectormath.cpp  vectormath.h
(+2378 files in other folders)
